# typed_argparser

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  noxfile.py  output.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
examples/: example_1.py  example_2.py
examples/git_cli/: add_group.py  common.py  git.py  init_group.py  remote_group.py
tests/: tests.py
typed_argparser/: __init__.py  config.py  constants.py  exceptions.py  fields.py  formatter.py  groups.py  libs.py  parser.py  types.py  utils.py  validators.py
